--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -19,8 +19,8 @@ structopt = { version = "0.3.8", optional = true }
 [dependencies]
 # third-party dependencies
 jsonrpc-core = "18.0.0"
-codec = { package = "parity-scale-codec", version = "2.2.0" }
-serde = { version = "1.0.102", features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "3.0.0" }
+serde = { version = "1.0.136", features = ["derive"] }
 futures = { version = "0.3.9", features = ["compat"] }
 hex-literal = "0.3.1"
 log = "0.4.8"
@@ -32,63 +32,63 @@ itertools = "0.10.1"
 node-polkadex-runtime = { path = '../runtime', version = '3.0.0' }
 
 # Substrate dependencies
-frame-benchmarking = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-frame-support = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-frame-benchmarking-cli = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-im-online = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-staking = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-transaction-payment-rpc = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-contracts = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-contracts-rpc = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-basic-authorship = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-client-api = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-chain-spec = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-consensus = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-sync-state-rpc = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-consensus-slots = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-consensus-uncles = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-authority-discovery = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-consensus-babe = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-consensus-babe-rpc = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-consensus-epochs = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-grandpa = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" ,package="sc-finality-grandpa"}
-sc-finality-grandpa-rpc = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-keystore = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-network = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-rpc = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-rpc-api = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-transaction-pool = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-api = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-authorship = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-block-builder = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-blockchain = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-consensus = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-consensus-babe = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-core = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-keystore = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-grandpa-primitives = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" , package="sp-finality-grandpa"}
-sp-inherents = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-timestamp = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-runtime = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-telemetry = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-transaction-pool = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-substrate-frame-rpc-system = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-service-test = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-keyring = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-frame-system = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-transaction-payment = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-transaction-pool-api = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-authority-discovery = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-consensus-uncles = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-consensus-epochs = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+grandpa = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" ,package="sc-finality-grandpa"}
+sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+grandpa-primitives = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" , package="sp-finality-grandpa"}
+sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-service-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 
 #Primitives
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'mainnet-release'}
-sc-executor = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'polkadot-v0.9.17'}
+sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 
 
-sc-cli = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master", features = ["wasmtime"] }
-node-executor = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master", features = ["wasmtime"] }
-sc-service = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master", features = ["wasmtime"]}
-sp-trie = { git = "https://github.com/Polkadex-Substrate/substrate", branch = "master", default-features= false, features = [
+sc-cli = {  git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.17", features = ["wasmtime"] }
+node-executor = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", features = ["wasmtime"] }
+sc-service = {  git = "https://github.com/paritytech/substrate",branch = "polkadot-v0.9.17", features = ["wasmtime"]}
+sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features= false, features = [
 	"memory-tracker",
 ] }
 
@@ -103,10 +103,10 @@ regex = "1"
 platforms = "1.1"
 async-std = { version = "1.6.5", features = ["attributes"] }
 soketto = "0.4.2"
-sc-keystore =  {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-consensus = {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-consensus-babe =  {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sc-consensus-epochs =  {  git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
+sc-keystore =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-consensus-babe =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sc-consensus-epochs =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 
 
 [features]
