--- a/pallets/pdex-migration/Cargo.toml
+++ b/pallets/pdex-migration/Cargo.toml
@@ -10,25 +10,29 @@ version = '1.0.0'
 targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
-frame-support = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-runtime = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-balances = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-std = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-frame-system = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-sudo = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-frame-benchmarking = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master", optional = true }
-sp-io = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-core = { default-features= false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-rand = { version = "0.7.2", default-features = false }
+codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }
+scale-info = { version = "1.0", default-features = false, features = ["derive"] }
+
+frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
+frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false,  optional = true }
+frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
+
+pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
+pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
+
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
+sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
 
 [dev-dependencies]
-sp-core = { git = "https://github.com/Polkadex-Substrate/substrate", branch = "master"}
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17"}
 
 [features]
 default = ['std']
 std = [
 	'codec/std',
+	'scale-info/std',
 	'frame-support/std',
 	'frame-system/std',
 	'sp-runtime/std',
