--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -11,94 +11,93 @@ repository = "https://github.com/Polkadex-Substrate/Polkadex"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
+codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive", "max-encoded-len"] }
+scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 hex-literal = { version = "0.3.3", optional = true }
 static_assertions = "1.1.0"
 log = { version = "0.4.14", default-features = false }
 smallvec = "1.6.1"
 #pallets
 #added
-pallet-authorship = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-babe = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-balances = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-grandpa = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-im-online = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-offences = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-session = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-staking = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-multisig = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-staking-reward-curve = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-sudo = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-utility = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-timestamp = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-transaction-payment = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-treasury = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-collective = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-democracy = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-elections-phragmen = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-membership = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-scheduler = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-bounties = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-indices = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-identity = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-proxy = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-tips = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-recovery = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-election-provider-multi-phase = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-pallet-authority-discovery = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
+pallet-authorship = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-babe = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-offences = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-staking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-multisig = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-staking-reward-curve = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-utility = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-treasury = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-collective = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-democracy = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-elections-phragmen = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-membership = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-scheduler = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-bounties = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-indices = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-identity = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-proxy = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-tips = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-recovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-election-provider-multi-phase = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 
 #end added
 #frame
-frame-support = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-frame-system = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-frame-executive = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
+frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 #sp
-sp-api = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-offchain = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-runtime = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-session = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-std = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-transaction-pool = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-version = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-io = { git = "https://github.com/Polkadex-Substrate/substrate", branch = "master", default-features =false}
+sp-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-version = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features =false}
 
 
 #added
-sp-authority-discovery = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-block-builder = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-consensus-babe = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-core = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-inherents = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-staking = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-npos-elections = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-frame-election-provider-support = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
+sp-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-staking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+sp-npos-elections = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+frame-election-provider-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 #end added
 
 # Used for the node template's RPCs
-frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
+frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 
 # Used for runtime benchmarking
-frame-benchmarking = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master", optional = true }
-frame-system-benchmarking = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master", optional = true }
-pallet-society = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master", optional = true }
+frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
+frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
+pallet-society = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", optional = true }
 
 
 # ORML Pallets
-orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", branch="mainnet-release", default-features = false }
+orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git", branch="polkadot-v0.9.17", default-features = false }
 
 # Local Dependecies
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'mainnet-release', default-features = false }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'polkadot-v0.9.17', default-features = false }
 pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
 
 [build-dependencies]
-substrate-wasm-builder = { git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
+substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
 
 [dev-dependencies]
-# sp-io = { git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-sp-core = { git = "https://github.com/Polkadex-Substrate/substrate", branch = "master" }
-# pallet-society = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master", optional = true }
-pallet-society = { default-features = false, git = "https://github.com/Polkadex-Substrate/substrate", branch = "master"}
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
+pallet-society = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17"}
 
 
 [features]
