--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -25,7 +25,7 @@ futures = { version = "0.3.9", features = ["compat"] }
 hex-literal = "0.3.1"
 log = "0.4.8"
 rand = "0.7.2"
-structopt = { version = "0.3.8" }
+clap = { version = "3.0", features = ["derive"] }
 parking_lot = "0.11.1"
 itertools = "0.10.1"
 # local dependencies
